# semantics-av-cli

./: .gitignore  CMakeLists.txt  EULA.md  INTELLIGENCE_TOS.md  LICENSE.md  PRIVACY_POLICY.md  README.md  ThirdPartyNotices.txt
cmake/: Dependencies.cmake  FetchSemanticsAV.cmake  SemanticsAVConfig.cmake.in  cmake_uninstall.cmake.in
config/: semantics-av.conf.example
docker/: .dockerignore  .env.example  Dockerfile  README.md  api-key.txt.example  docker-compose.yml
include/semantics_av/common/: config.hpp  constants.hpp  diagnostics.hpp  error_framework.hpp  logger.hpp  paths.hpp  progress_bar.hpp  security.hpp  types.hpp  version.hpp
include/semantics_av/config/: validator.hpp  wizard.hpp
include/semantics_av/core/: engine.hpp  error_codes.hpp
include/semantics_av/daemon/: client.hpp  client_pool.hpp  handler.hpp  http_server.hpp  protocol.hpp  reloadable_config.hpp  server.hpp
include/semantics_av/format/: common_types.hpp  console_formatter.hpp  format_utils.hpp  html_formatter.hpp  json_formatter.hpp  markdown_formatter.hpp  markdown_renderer.hpp
include/semantics_av/http/: error_codes.hpp  response.hpp
include/semantics_av/network/: analysis_service.hpp  client.hpp  downloader.hpp
include/semantics_av/report/: converter.hpp  storage.hpp
include/semantics_av/scan/: result_formatter.hpp  scanner.hpp
include/semantics_av/update/: updater.hpp
licenses/LIEF/: LICENSE
licenses/md4c/: LICENSE.md
licenses/onnxruntime/: ThirdPartyNotices.txt
scripts/: install.sh  post_install.sh  post_install_user.sh  uninstall.sh
src/: main.cpp
src/cli/: analyze_command.cpp  analyze_command.hpp  config_command.cpp  config_command.hpp  daemon_command.cpp  daemon_command.hpp  main_command.cpp  main_command.hpp  report_command.cpp  report_command.hpp  scan_command.cpp  scan_command.hpp  update_command.cpp  update_command.hpp
src/common/: config.cpp  diagnostics.cpp  logger.cpp  paths.cpp  progress_bar.cpp  security.cpp  types.cpp
src/config/: validator.cpp  wizard.cpp
src/core/: engine.cpp
src/daemon/: client.cpp  client_pool.cpp  handler.cpp  http_server.cpp  protocol.cpp  server.cpp
src/format/: console_formatter.cpp  format_utils.cpp  html_formatter.cpp  json_formatter.cpp  markdown_formatter.cpp  markdown_renderer.cpp
src/http/: error_codes.cpp  response.cpp
src/network/: analysis_service.cpp  client.cpp  downloader.cpp
src/report/: converter.cpp  storage.cpp
src/scan/: result_formatter.cpp  scanner.cpp
src/update/: updater.cpp
systemd/: semantics-av-user.service  semantics-av.service
